--- a/css/style.css
+++ b/css/style.css
@@ -8,12 +8,16 @@ There are some missing selectors.
 Make sure to learn what the starter code does!!
 */
 
+@import url('https://fonts.googleapis.com/css2?family=Andika&display=swap');
+
 body{
   color: #000000;
   font-size: 16px;
   margin: 1.2em;
   font-family: 'Andika', sans-serif;
   background-size: cover ;
+  background: #DDDDDD url("pigeon-background.jpeg");
+  background-repeat: no-repeat;
   background-position: center;
 }
 
@@ -24,6 +28,8 @@ main{
 h1{
   color: #c12258;
   font-size: 2em;
+  line-height: 2;
+  text-align: center;
 }
 
 caption{
@@ -31,28 +37,42 @@ caption{
 }
 
 p{
+    padding:15px 0px 0px 0px;
 
 }
 
-a{
+a{ font-size: 16px;
+  color: #b92751;
+  text-decoration: wavy underline;
 
+}
+
+a:focus{ 
+  outline: 3px dashed #417243; 
 }
 
 table{
-    border: 2px solid #000000;
+  border: 2px solid #000000;
 }
 
 .colhead{
-  background-color: #7e0830;
+  column-width: 125px;
+  padding: 10px;
+  text-transform: uppercase;
+  text-align: center;
   color: #FFFFFF;
+  background-color: #7e0830;
 }
 
 .rowhead{
+  border: 2px solid #000000;
 
 }
 
 td{
-  
+  text-align: center;
+  padding: 10px;
+  border-top: 2px solid #000000;
 }
 
 tr{
@@ -63,7 +83,9 @@ tr{
 
 }
 
-thead tr:first-child th:first-child{}
+thead tr:first-child th:first-child{
+
+}
 
 footer{
   width:100%;
